feat(application authentication): Add support for API_KEYS
